{
    "name": "Input",
    "maps": [
        {
            "name": "BuildMode",
            "id": "1a0dd22e-9eca-4c41-948e-22b89fd8ee06",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "e3297c48-6ead-4b05-901f-d4f4df5d24e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowAdditionalInfo",
                    "type": "Button",
                    "id": "28798b85-d0d5-4ecb-8141-17a1eaaa587d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75d4dd25-c446-44af-a0de-0e9f9a19893f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35a780e6-81ae-45a8-b77f-8020b633bd01",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowAdditionalInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ViewMode",
            "id": "ebd91f5c-ac3a-4c56-b1b8-fda42d8666f9",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "36520d05-7459-46e2-bd93-82a820b2119c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowAdditionalInfo",
                    "type": "Button",
                    "id": "1bc6c82b-31e6-42a6-bb87-e7e03d3aea3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "660798f8-813f-4102-a8b5-45a6175b8c52",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d53c061d-f974-45c7-b079-6e1364930db6",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowAdditionalInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MovementMode",
            "id": "f805b270-e697-4412-aac2-4bc5dcaf4032",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b53cc78d-2be0-42ae-9ee0-d2c0a703d9b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "f1b6287e-e34e-4dd6-aa04-6b9164a7b409",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "f91dc548-80ab-4b2b-9858-2edcf6d42143",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d1c73981-f308-4d4c-a0d9-5f3c571c92eb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d10be780-2247-402e-98d0-f5ca48ce99eb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c593035b-7217-44ec-9c65-cf889e21c7b4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "38a20659-ef9c-42f0-96e4-235f3b4287bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "76f81ddb-738a-4460-be18-768519194ef7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "26875de7-e8e2-4367-8e12-cc4644e6a877",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e23dc0f2-317c-4a67-9852-52dd01a6ba4c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1970812c-4e34-41ac-a483-a562145075cb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "42740d7e-928c-4608-8f96-b35c9af08bbc",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuMode",
            "id": "61faa959-c454-4bb9-8633-1ee35ecc8824",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ab8d97a8-02b6-4800-84e8-04176f159d02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c617744-eebc-4bda-b990-ae933238aed0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TowerMode",
            "id": "ac38edc6-140c-4f63-bfc8-72aa97979f4f",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "a3889b19-fc8f-45fd-809f-2714dd5da001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowAdditionalInfo",
                    "type": "Button",
                    "id": "efd1bc0a-b4d8-4213-928c-474570457921",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d98f21e-aab3-4278-9c3d-d1d8bf4390c1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d5de665-bf71-4f56-9590-1cb0eb633654",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowAdditionalInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}